[package]
name = "hoard-cli"
version = "0.0.1"
edition = "2021"
description = "Hoard repositories with ease"
repository = "https://github.com/beepboopbangbang/hoard-cli"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
